# indstudy_gestures

./: README.md
Examples/nuitrack_console_sample/src/: main.cpp
Examples/nuitrack_device_api_sample/src/: main.cpp
Examples/spot/devel/: .catkin  setup.sh
Examples/spot/devel/lib/pkgconfig/: nuitrack_body_tracker.pc  publisher_subscriber.pc  skeleton_subscriber.pc  spot_subscriber.pc
Examples/spot/devel/share/nuitrack_body_tracker/cmake/: nuitrack_body_trackerConfig.cmake
Examples/spot/devel/share/publisher_subscriber/cmake/: publisher_subscriber-msg-paths.cmake  publisher_subscriberConfig.cmake
Examples/spot/devel/share/skeleton_subscriber/cmake/: skeleton_subscriberConfig.cmake
Examples/spot/src/publisher_subscriber/: CMakeLists.txt
Examples/spot/src/spot_subscriber/: CMakeLists.txt  package.xml
GestureTracker/devel/: .catkin  _setup_util.py
GestureTracker/devel/include/publisher_subscriber/: GestureInformation.h
GestureTracker/devel/lib/pkgconfig/: publisher_subscriber.pc
GestureTracker/devel/lib/publisher_subscriber/: DTW_subscriber.py  gesture_subscriber  publisher  subscriber
GestureTracker/devel/share/publisher_subscriber/cmake/: publisher_subscriber-msg-extras.cmake  publisher_subscriber-msg-paths.cmake  publisher_subscriberConfig.cmake
GestureTracker/msg/: GestureInformation.msg
GestureTracker/src/publisher_subscriber/: CMakeLists.txt  package.xml
GestureTracker/src/publisher_subscriber/src/: publisher.cpp  subscriber.cpp
publisher_subscriber/src/: gesture_subscriber.cpp
(+15 files in other folders)
