<?xml version="1.0"?>
<package format="2">
  <name>publisher_subscriber</name>
  <version>0.0.0</version>
  <description>The publisher_subscriber package</description>

  <maintainer email="user1@todo.todo">user1</maintainer>
  <license>TODO</license> <!-- Update this with the appropriate license -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>body_tracker_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>body_tracker_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
